util/FileUtil: Clean URL construction future deprecation.